--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "jsonhint-ts",
 	"displayName": "JsonHint-TS",
-	"publisher": "JsonHintTS",
+	"publisher": "andysobol",
 	"description": "Extension to display resolved token values from JSON with full resolution chain, compatible with Tokens Studio logic.",
-	"version": "0.6.1",
+	"version": "0.6.2",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/AndySobol/JsonHint-TS"
@@ -13,13 +13,14 @@
 	},
 	"homepage": "https://github.com/AndySobol/JsonHint-TS/blob/main/README.md",
 	"engines": {
-		"vscode": "^1.50.0"
+		"vscode": "^1.80.0"
 	},
 	"categories": [
 		"Other"
 	],
 	"icon": "icon.png",
 	"activationEvents": [
+		"onStartupFinished",
 		"onLanguage:json",
 		"onLanguage:jsonc"
 	],
