--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "JsonHint-TS",
 	"publisher": "andysobol",
 	"description": "Extension to display resolved token values from JSON with full resolution chain, compatible with Tokens Studio logic.",
-	"version": "0.6.4",
+	"version": "0.6.5",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/AndySobol/JsonHint-TS"
@@ -12,6 +12,9 @@
 		"url": "https://github.com/AndySobol/JsonHint-TS/issues"
 	},
 	"homepage": "https://github.com/AndySobol/JsonHint-TS/blob/main/README.md",
+	"scripts": {
+  	"build": "webpack"
+	},
 	"engines": {
 		"vscode": "^1.80.0"
 	},
@@ -24,7 +27,7 @@
 		"onLanguage:json",
 		"onLanguage:jsonc"
 	],
-	"main": "./extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"configuration": {
 			"title": "JsonHint-TS",
@@ -82,5 +85,10 @@
 	"dependencies": {
 		"jsonc-parser": "^3.3.1",
 		"mathjs": "^12.4.3"
+	},
+	"devDependencies": {
+		"source-map-loader": "^5.0.0",
+		"webpack": "^5.98.0",
+		"webpack-cli": "^6.0.1"
 	}
 }
