--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
 	"name": "jsonhint-ts",
 	"displayName": "JsonHint-TS",
 	"publisher": "andySobolev",
+	"license": "Proprietary",
 	"description": "Extension to display resolved token values from JSON with full resolution chain, compatible with Tokens Studio logic.",
-	"version": "0.6.8",
+	"version": "0.6.9",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/AndySobol/JsonHint-TS"
