--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "andySobolev",
 	"license": "Proprietary",
 	"description": "Extension to display resolved token values from JSON with full resolution chain, compatible with Tokens Studio logic.",
-	"version": "0.7.0",
+	"version": "0.8.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/AndySobol/JsonHint-TS"
@@ -90,7 +90,8 @@
 	},
 	"dependencies": {
 		"jsonc-parser": "^3.3.1",
-		"mathjs": "^12.4.3"
+		"mathjs": "^12.4.3",
+		"colorjs.io": "*"
 	},
 	"devDependencies": {
 		"source-map-loader": "^5.0.0",
