--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "andySobolev",
 	"license": "Proprietary",
 	"description": "Extension to display resolved token values from JSON with full resolution chain, compatible with Tokens Studio logic.",
-	"version": "0.8.1",
+	"version": "1.0.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/AndySobol/JsonHint-TS"
@@ -14,7 +14,8 @@
 	},
 	"homepage": "https://github.com/AndySobol/JsonHint-TS/blob/main/README.md",
 	"scripts": {
-		"build": "webpack"
+		"build": "webpack",
+		"compile": "tsc -p ."
 	},
 	"engines": {
 		"vscode": "^1.80.0"
@@ -33,6 +34,26 @@
 		"configuration": {
 			"title": "JsonHint-TS",
 			"properties": {
+				"jsonTokensHint.tooltipBackgroundColor": {
+					"type": "string",
+					"default": "#1e1e1e",
+					"description": "Background color for token tooltip view."
+				},
+				"jsonTokensHint.tooltipTextColor": {
+					"type": "string",
+					"default": "#d4d4d4",
+					"description": "Text color for token tooltip view."
+				},
+				"jsonTokensHint.tooltipFontSize": {
+					"type": "string",
+					"default": "14px",
+					"description": "Font size for token tooltip view."
+				},
+				"jsonTokensHint.tooltipAnimationDuration": {
+					"type": "string",
+					"default": "0.3s",
+					"description": "Animation duration (fade-in) for token tooltip view."
+				},
 				"jsonTokensHint.inheritanceStyle": {
 					"type": "string",
 					"enum": [
@@ -86,15 +107,36 @@
 					"description": "If true, the extension will recognize tokens defined without a leading '$'."
 				}
 			}
-		}
+		},
+		"commands": [
+			{
+				"command": "jsonhintTs.goToTokenDefinition",
+				"title": "Go to Token Definition"
+			}
+		],
+		"languages": [
+			{
+				"id": "json",
+				"extensions": [
+					".json"
+				],
+				"aliases": [
+					"JSON"
+				]
+			}
+		]
 	},
 	"dependencies": {
+		"colorjs.io": "*",
 		"jsonc-parser": "^3.3.1",
-		"mathjs": "^12.4.3",
-		"colorjs.io": "*"
+		"mathjs": "^12.4.3"
 	},
 	"devDependencies": {
+		"@types/node": "^22.14.0",
+		"@types/vscode": "^1.99.1",
 		"source-map-loader": "^5.0.0",
+		"ts-loader": "^9.5.2",
+		"typescript": "^4.9.5",
 		"webpack": "^5.98.0",
 		"webpack-cli": "^6.0.1"
 	}
