--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jsonhint-ts",
-	"displayName": "JsonHint-TS",
+	"displayName": "jsonhint-ts",
 	"publisher": "andySobolev",
 	"license": "Proprietary",
 	"description": "Extension to display resolved token values from JSON with full resolution chain, compatible with Tokens Studio logic.",
@@ -32,29 +32,29 @@
 	"main": "./dist/extension.js",
 	"contributes": {
 		"configuration": {
-			"title": "JsonHint-TS",
+			"title": "jsonhint-ts",
 			"properties": {
-				"jsonTokensHint.tooltipBackgroundColor": {
+				"jsonhintTs.tooltipBackgroundColor": {
 					"type": "string",
 					"default": "#1e1e1e",
 					"description": "Background color for token tooltip view."
 				},
-				"jsonTokensHint.tooltipTextColor": {
+				"jsonhintTs.tooltipTextColor": {
 					"type": "string",
 					"default": "#d4d4d4",
 					"description": "Text color for token tooltip view."
 				},
-				"jsonTokensHint.tooltipFontSize": {
+				"jsonhintTs.tooltipFontSize": {
 					"type": "string",
 					"default": "14px",
 					"description": "Font size for token tooltip view."
 				},
-				"jsonTokensHint.tooltipAnimationDuration": {
+				"jsonhintTs.tooltipAnimationDuration": {
 					"type": "string",
 					"default": "0.3s",
 					"description": "Animation duration (fade-in) for token tooltip view."
 				},
-				"jsonTokensHint.inheritanceStyle": {
+				"jsonhintTs.inheritanceStyle": {
 					"type": "string",
 					"enum": [
 						"compact",
@@ -63,17 +63,17 @@
 					"default": "compact",
 					"description": "How to display inheritance chain."
 				},
-				"jsonTokensHint.showIcons": {
+				"jsonhintTs.showIcons": {
 					"type": "boolean",
 					"default": true,
 					"description": "Show icons for token types in hover."
 				},
-				"jsonTokensHint.showArrows": {
+				"jsonhintTs.showArrows": {
 					"type": "boolean",
 					"default": true,
 					"description": "Show arrows between tokens in inheritance chain."
 				},
-				"jsonTokensHint.complexTypes": {
+				"jsonhintTs.complexTypes": {
 					"type": "array",
 					"default": [
 						"typography",
@@ -82,7 +82,7 @@
 					],
 					"description": "List of token types treated as complex (rendered as tables)."
 				},
-				"jsonTokensHint.noisyTokens": {
+				"jsonhintTs.noisyTokens": {
 					"type": "array",
 					"default": [
 						"core.ly.tab.base",
@@ -91,17 +91,17 @@
 					],
 					"description": "List of tokens to exclude from the inheritance chain (noisy tokens)."
 				},
-				"jsonTokensHint.maxChainLength": {
+				"jsonhintTs.maxChainLength": {
 					"type": "number",
 					"default": 5,
 					"description": "Maximum chain depth displayed in hover tooltips."
 				},
-				"jsonTokensHint.maxSuggestions": {
+				"jsonhintTs.maxSuggestions": {
 					"type": "number",
 					"default": 300,
 					"description": "Limit number of completion suggestions to avoid UI lag."
 				},
-				"jsonTokensHint.allowNoDollar": {
+				"jsonhintTs.allowNoDollar": {
 					"type": "boolean",
 					"default": true,
 					"description": "If true, the extension will recognize tokens defined without a leading '$'."
@@ -112,6 +112,14 @@
 			{
 				"command": "jsonhintTs.goToTokenDefinition",
 				"title": "Go to Token Definition"
+			},
+			{
+				"command": "jsonhintTs.viewTokenTooltip",
+				"title": "View Token Tooltip"
+			},
+			{
+				"command": "jsonhintTs.revealToken",
+				"title": "Reveal Token in File"
 			}
 		],
 		"languages": [
