--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "andySobolev",
 	"license": "Proprietary",
 	"description": "Extension to display resolved token values from JSON with full resolution chain, compatible with Tokens Studio logic.",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/AndySobolev/JsonHint-TS"
@@ -121,6 +121,10 @@
 			{
 				"command": "jsonhintTs.revealToken",
 				"title": "Reveal Token in File"
+			},
+			{
+				"command": "jsonhintTs.forceRefresh",
+				"title": "Force Refresh Tokens"
 			}
 		],
 		"languages": [
