--- a/package.json
+++ b/package.json
@@ -4,7 +4,23 @@
 	"publisher": "andySobolev",
 	"license": "Proprietary",
 	"description": "Extension to display resolved token values from JSON with full resolution chain, compatible with Tokens Studio logic.",
-	"version": "1.0.3",
+	"keywords": [
+		"json",
+		"tokens",
+		"json tokens",
+		"design tokens",
+		"Tokens Studio",
+		"design system",
+		"figma",
+		"Figma integration",
+		"token resolution",
+		"autocomplete",
+		"hover",
+		"vscode",
+		"syntax highlighting",
+		"auto-completion"
+	],
+	"version": "1.0.4",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/AndySobolev/JsonHint-TS"
@@ -33,9 +49,10 @@
 	],
 	"main": "./dist/extension.js",
 	"files": [
-  	"dist",
-  	"icon.png",
-  	"screenshots"
+		"dist",
+		"icon.png",
+		"icon.svg",
+		"screenshots"
 	],
 	"contributes": {
 		"configuration": {
